# terminal-emulator-ncurses

./: CMakeLists.txt  Makefile  README.md  curses_interface.cpp  curses_interface.h  main.cpp  system_interface.cpp  system_interface.h  terminal_logic.cpp  terminal_logic.h  unit_tests.cpp
docs/: CMake-ncursesw-wide-char-linking.md
src/: ansi_logic.cpp  ansi_logic.h  curses_interface.cpp  curses_interface.h  curses_terminal.cpp  curses_terminal.h  main.cpp  terminal_logic.cpp  terminal_logic.h  unit_tests.cpp
